Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/collections/index.html
+++ b/v/0.3.0/collections/index.html
@@ -749,8 +749,8 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 <p>Some commonly used extensions are:</p>
 <ul>
 <li>EO extension (mostly integrated within openEO)</li>
-<li>Scientific extension</li>
-<li>Dimensions extension</li>
+<li>Scientific extension (integrated within openEO)</li>
+<li>Dimensions extension (draft)</li>
 </ul>
 <h2 id="links">Links</h2>
 <p>For data discovery in general and each collection you can specify a set of references. These can be alternate representations, e.g. data discovery via OGC WCS or OGC CSW, references to a license, references to actual raw data for downloading, detailed information about pre-processing, etc.</p>
@@ -791,7 +791,7 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 </tr>
 <tr>
 <td><code>license</code></td>
-<td>The license URL for the dataset SHOULD be specified if the <code>license</code> field is set to <code>proprietary</code>. If there is no public license URL available, it is RECOMMENDED to supplement the STAC catalog with the license text in separate file and link to this file.</td>
+<td>The license URL for the dataset SHOULD be specified if the <code>license</code> field is set to <code>proprietary</code>. If there is no public license URL available, it is RECOMMENDED to supplement the collection with the license text in a separate file and link to this file.</td>
 <td>Collections</td>
 </tr>
 <tr>
@@ -811,7 +811,7 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 </tr>
 <tr>
 <td><code>cite-as</code></td>
-<td>A <a href="https://www.doi.org/">DOI</a> link for citation purposes (see STAC Scientific Extension).</td>
+<td>For all DOI names specified, the respective DOI links SHOULD be added to the links section of the catalog with the <code>rel</code> type <code>cite-as</code>.</td>
 <td>Collections</td>
 </tr>
 </tbody>
