Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/processes/index.html
+++ b/v/0.3.0/processes/index.html
@@ -721,7 +721,24 @@
 <li>The schema usually defines the data type and a format according to JSON schema. There are openEO specific formats defined below.</li>
 </ul>
 <h2 id="openeo-specific-formats">openEO specific formats</h2>
-<p>TBD</p>
+<table>
+<thead>
+<tr>
+<th>Format Name</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>eodata</code></td>
+<td>A proprietary way to pass the processed data from one process to another.</td>
+</tr>
+</tbody>
+</table>
+<div class="admonition note">
+<p class="admonition-title">Note</p>
+<p>These formats are still evolving and will likely change with the definition of the openEO processes for openEO API version 0.4.</p>
+</div>
 <h2 id="core-processes">Core Processes</h2>
 <p>There are some processes that we define to be core processes that are pre-defined and back-ends should follow these specifications to be interoperable. Not all processes need to be implemented by all back-ends.</p>
 <p>See the <strong><a href="../processreference/">process reference</a></strong> for pre-defined processes.</p>
