Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/guidelines-api/index.html
+++ b/v/0.3.0/guidelines-api/index.html
@@ -910,7 +910,7 @@
 <p>All names SHOULD be written in snake case, i.e. words are separated with one underscore character (_) and no spaces, with all letters lowercased. Example: <code>hello_world</code>. This applies particularly to endpoints and JSON property names. HTTP header fields follow their respective casing conventions, e.g. <code>Content-Type</code> or <code>OpenEO-Costs</code>, despite being case-insensitive according to <a href="https://tools.ietf.org/html/rfc7230#section-3.2">RFC 7230</a>.</p>
 <h2 id="technical-requirements">Technical requirements</h2>
 <h3 id="http">HTTP</h3>
-<p>The API developed by the openEO project uses <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">HTTP REST Level 2</a> for communication between client and back-end server.</p>
+<p>The API developed by the openEO project uses <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">HTTP REST</a><a href="https://martinfowler.com/articles/richardsonMaturityModel.html#level2">Level 2</a> for communication between client and back-end server.</p>
 <p>Public APIs MUST be available via HTTPS only and all inbound calls MUST be HTTPS. </p>
 <h4 id="verbs">Verbs</h4>
 <p>Endpoints SHOULD use meaningful HTTP verbs (e.g. GET, POST, PUT, PATCH, DELETE).</p>
