Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/arch/index.html
+++ b/v/0.3.0/arch/index.html
@@ -702,8 +702,8 @@
 <td>Organizes and manages user-defined process graphs.</td>
 </tr>
 <tr>
-<td>Web Service Management</td>
-<td>Web services to access data and job results, e.g. as WCS or WMTS service.</td>
+<td>Secondary Services Management</td>
+<td>External web services to access data and job results such as a OGC WMTS service.</td>
 </tr>
 <tr>
 <td>User Content</td>
