Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/collections/index.html
+++ b/v/0.3.0/collections/index.html
@@ -824,7 +824,7 @@
 <tbody>
 <tr>
 <td><code>self</code></td>
-<td>Absolute URL to the the data discovery endpoint or the collection itself.</td>
+<td>Absolute URL to the data discovery endpoint or the collection itself.</td>
 <td>Discovery +Collections</td>
 </tr>
 <tr>
@@ -849,7 +849,7 @@
 </tr>
 <tr>
 <td><code>alternate</code></td>
-<td>An alternative representation of the metadata. This could be a web service such as OGC WCS or OGC CSW or a metadata document following another standard such as ISO 19115, INSPIRE or DCAT.</td>
+<td>An alternative representation of the metadata. This could be a secondary web service such as OGC WCS or OGC CSW or a metadata document following another standard such as ISO 19115, INSPIRE or DCAT.</td>
 <td>Discovery +Collections</td>
 </tr>
 <tr>
