--- a/v/0.3.0/cors/index.html
+++ b/v/0.3.0/cors/index.html
@@ -757,7 +757,7 @@ CORS defines a way in which a browser and server can interact to determine wheth
 <tbody>
 <tr>
 <td>Access-Control-Allow-Origin</td>
-<td>Allowed origin for the request, including protocol, host and port. It is RECOMMENDED to return the value of the request's origin header. If no <code>Origin</code> is sent to the back-end CORS headers SCHOULD NOT be sent at all.</td>
+<td>Allowed origin for the request, including protocol, host and port. It is RECOMMENDED to return the value of the request's origin header. If no <code>Origin</code> is sent to the back-end CORS headers SHOULD NOT be sent at all.</td>
 <td><code>http://client.isp.com:80</code></td>
 </tr>
 <tr>
