--- a/v/0.3.0/index.html
+++ b/v/0.3.0/index.html
@@ -671,7 +671,7 @@
 <li>discover which Earth observation data and processes are available at cloud back-ends,</li>
 <li>execute (chained) processes on back-ends, </li>
 <li>run <a href="udfs/">user-defined functions</a> (UDFs) on back-ends where UDFs can be exposed to the data in different ways, </li>
-<li>download (intermediate) results as web services, and</li>
+<li>download (intermediate) results, and</li>
 <li>manage user content including accounting.</li>
 </ul>
 <p>The API is defined as an <a href="https://github.com/OAI/OpenAPI-Specification/blob/master/versions/3.0.1.md">OpenAPI 3.0</a> JSON file.</p>
