--- a/v/0.3.0/processes/index.html
+++ b/v/0.3.0/processes/index.html
@@ -712,7 +712,7 @@
                 
                 
                 <h1 id="processes">Processes</h1>
-<p>A process is an operation that performs a specific task on a set of parameters and returns a result. It's definition includes a name, a set of parameters, a return type, a set of possible errors or exceptions and some other metadata. In openEO they are used to build a chain of processes (process graph), which can be applied to EO datasets to derive your own findings from the data.</p>
+<p>A process is an operation that performs a specific task on a set of parameters and returns a result. Its definition includes a name, a set of parameters, a return type, a set of possible errors or exceptions and some other metadata. In openEO they are used to build a chain of processes (process graph), which can be applied to EO datasets to derive your own findings from the data.</p>
 <p>To define new processes, back-end providers should know:</p>
 <ul>
 <li>The name is the identifier for the process and MUST never contain a forward slash <code>/</code>. </li>
