Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/usermanagement/index.html
+++ b/v/0.3.0/usermanagement/index.html
@@ -657,11 +657,13 @@
 <ul>
 <li><a href="http://www.differencebetween.net/technology/difference-between-authentication-and-authorization/">authenticate and authorize</a> a user, which may include <a href="http://openid.net/specs/openid-connect-registration-1_0.html">user registration with OpenID Connect</a>,</li>
 <li>handle storage space limits (disk quota),</li>
-<li>manage billing, which includes to</li>
+<li>manage billing, which includes to<ul>
 <li>query the credit a user has available,</li>
 <li>estimate costs for certain operations (data processing and downloading),</li>
 <li>get information about produced costs,</li>
 <li>limit costs of certain operations.</li>
+</ul>
+</li>
 </ul>
 <p>Therefore, the API leaves some aspects open that have to be handled by the back-ends separately, including </p>
 <ul>
