--- a/v/0.3.0/guidelines-clients/index.html
+++ b/v/0.3.0/guidelines-clients/index.html
@@ -1328,12 +1328,21 @@ obj.version();
 <h2 id="workflow-example">Workflow example</h2>
 <p>Some simplified example workflows using different programming styles are listed below.</p>
 <h3 id="r-functional-style">R (functional style)</h3>
-<div class="codehilite"><pre><span></span><span class="kc">...</span>
+<div class="codehilite"><pre><span></span><span class="kn">library</span><span class="p">(</span>openeo<span class="p">)</span>
+con <span class="o">=</span> connect<span class="p">(</span><span class="s">&quot;https://openeo.org&quot;</span><span class="p">)</span>
+cap <span class="o">=</span> <span class="kp">capabilities</span><span class="p">()</span>
+cap <span class="o">%&gt;%</span> <span class="kp">version</span><span class="p">()</span>
+con <span class="o">%&gt;%</span> describeCollection<span class="p">(</span><span class="s">&quot;Sentinel-2A&quot;</span><span class="p">)</span>
+con <span class="o">%&gt;%</span> list_processes<span class="p">()</span>
+pg <span class="o">=</span> <span class="kc">...</span>
+job <span class="o">=</span> create_job<span class="p">(</span>pg<span class="p">)</span>
+job <span class="o">%&gt;%</span> start_job<span class="p">()</span>
+job <span class="o">%&gt;%</span> describe_job<span class="p">()</span>
+job <span class="o">%&gt;%</span> download_results<span class="p">(</span><span class="s">&quot;/tmp/job_results/&quot;</span><span class="p">)</span>
 </pre></div>
 
 <h3 id="python-mixed-style">Python (mixed style)</h3>
 <div class="codehilite"><pre><span></span><span class="kn">import</span> <span class="nn">openeo</span>
-
 <span class="n">con</span> <span class="o">=</span> <span class="n">openeo</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="s2">&quot;https://openeo.org&quot;</span><span class="p">)</span>
 <span class="n">cap</span> <span class="o">=</span> <span class="n">con</span><span class="o">.</span><span class="n">capabilities</span><span class="p">()</span>
 <span class="k">print</span> <span class="n">cap</span><span class="o">.</span><span class="n">version</span><span class="p">()</span>
@@ -1348,7 +1357,6 @@ obj.version();
 
 <h3 id="java-object-oriented-style">Java (object oriented style)</h3>
 <div class="codehilite"><pre><span></span><span class="kn">import</span> <span class="nn">org.openeo.*</span><span class="o">;</span>
-
 <span class="n">OpenEO</span> <span class="n">obj</span> <span class="o">=</span> <span class="k">new</span> <span class="n">OpenEO</span><span class="o">();</span>
 <span class="n">Connection</span> <span class="n">con</span> <span class="o">=</span> <span class="n">obj</span><span class="o">.</span><span class="na">connect</span><span class="o">(</span><span class="s">&quot;https://openeo.org&quot;</span><span class="o">);</span>
 <span class="n">Capabilities</span> <span class="n">cap</span> <span class="o">=</span> <span class="n">con</span><span class="o">.</span><span class="na">capabilities</span><span class="o">();</span>
