Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/guidelines-clients/index.html
+++ b/v/0.3.0/guidelines-clients/index.html
@@ -1329,7 +1329,7 @@ obj.version();
 <p>Some simplified example workflows using different programming styles are listed below.</p>
 <h3 id="r-functional-style">R (functional style)</h3>
 <div class="codehilite"><pre><span></span><span class="kn">library</span><span class="p">(</span>openeo<span class="p">)</span>
-con <span class="o">=</span> connect<span class="p">(</span><span class="s">&quot;https://openeo.org&quot;</span><span class="p">)</span>
+con <span class="o">=</span> connect<span class="p">(</span><span class="s">&quot;https://openeo.org&quot;</span><span class="p">,</span> <span class="s">&quot;username&quot;</span><span class="p">,</span> <span class="s">&quot;password&quot;</span><span class="p">,</span> <span class="s">&quot;oidc&quot;</span><span class="p">)</span>
 cap <span class="o">=</span> <span class="kp">capabilities</span><span class="p">()</span>
 cap <span class="o">%&gt;%</span> <span class="kp">version</span><span class="p">()</span>
 con <span class="o">%&gt;%</span> describeCollection<span class="p">(</span><span class="s">&quot;Sentinel-2A&quot;</span><span class="p">)</span>
@@ -1343,7 +1343,7 @@ job <span class="o">%&gt;%</span> download_results<span class="p">(</span><span 
 
 <h3 id="python-mixed-style">Python (mixed style)</h3>
 <div class="codehilite"><pre><span></span><span class="kn">import</span> <span class="nn">openeo</span>
-<span class="n">con</span> <span class="o">=</span> <span class="n">openeo</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="s2">&quot;https://openeo.org&quot;</span><span class="p">)</span>
+<span class="n">con</span> <span class="o">=</span> <span class="n">openeo</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span><span class="s2">&quot;https://openeo.org&quot;</span><span class="p">,</span> <span class="s2">&quot;username&quot;</span><span class="p">,</span> <span class="s2">&quot;password&quot;</span><span class="p">,</span> <span class="s2">&quot;oidc&quot;</span><span class="p">)</span>
 <span class="n">cap</span> <span class="o">=</span> <span class="n">con</span><span class="o">.</span><span class="n">capabilities</span><span class="p">()</span>
 <span class="k">print</span> <span class="n">cap</span><span class="o">.</span><span class="n">version</span><span class="p">()</span>
 <span class="k">print</span> <span class="n">con</span><span class="o">.</span><span class="n">describe_collection</span><span class="p">(</span><span class="s2">&quot;Sentinel-2A&quot;</span><span class="p">)</span>
@@ -1358,7 +1358,7 @@ job <span class="o">%&gt;%</span> download_results<span class="p">(</span><span 
 <h3 id="java-object-oriented-style">Java (object oriented style)</h3>
 <div class="codehilite"><pre><span></span><span class="kn">import</span> <span class="nn">org.openeo.*</span><span class="o">;</span>
 <span class="n">OpenEO</span> <span class="n">obj</span> <span class="o">=</span> <span class="k">new</span> <span class="n">OpenEO</span><span class="o">();</span>
-<span class="n">Connection</span> <span class="n">con</span> <span class="o">=</span> <span class="n">obj</span><span class="o">.</span><span class="na">connect</span><span class="o">(</span><span class="s">&quot;https://openeo.org&quot;</span><span class="o">);</span>
+<span class="n">Connection</span> <span class="n">con</span> <span class="o">=</span> <span class="n">obj</span><span class="o">.</span><span class="na">connect</span><span class="o">(</span><span class="s">&quot;https://openeo.org&quot;</span><span class="o">,</span> <span class="s">&quot;username&quot;</span><span class="o">,</span> <span class="s">&quot;password&quot;</span><span class="o">,</span> <span class="s">&quot;oidc&quot;</span><span class="o">);</span>
 <span class="n">Capabilities</span> <span class="n">cap</span> <span class="o">=</span> <span class="n">con</span><span class="o">.</span><span class="na">capabilities</span><span class="o">();</span>
 <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span><span class="n">cap</span><span class="o">.</span><span class="na">version</span><span class="o">());</span>
 <span class="n">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span><span class="n">con</span><span class="o">.</span><span class="na">describeCollection</span><span class="o">(</span><span class="s">&quot;Sentinel-2A&quot;</span><span class="o">));</span>
@@ -1371,7 +1371,7 @@ job <span class="o">%&gt;%</span> download_results<span class="p">(</span><span 
 </pre></div>
 
 <h3 id="php-procedural-style">PHP (procedural style)</h3>
-<div class="codehilite"><pre><span></span><span class="x">$connection = openeo_connect(&#39;http://openeo.org&#39;, &quot;username&quot;, &quot;password&quot;);</span>
+<div class="codehilite"><pre><span></span><span class="x">$connection = openeo_connect(&quot;http://openeo.org&quot;, &quot;username&quot;, &quot;password&quot;, &quot;oidc&quot;);</span>
 <span class="x">$capabilities = openeo_capabilities($connection);</span>
 <span class="x">echo openeo_capabilities_version($capabilites);</span>
 <span class="x">echo openeo_describe_collection($connection, &quot;Sentinel-2A&quot;);</span>
