Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/guidelines-clients/index.html
+++ b/v/0.3.0/guidelines-clients/index.html
@@ -1333,12 +1333,12 @@ con <span class="o">=</span> connect<span class="p">(</span><span class="s">&quo
 cap <span class="o">=</span> <span class="kp">capabilities</span><span class="p">()</span>
 cap <span class="o">%&gt;%</span> <span class="kp">version</span><span class="p">()</span>
 con <span class="o">%&gt;%</span> describeCollection<span class="p">(</span><span class="s">&quot;Sentinel-2A&quot;</span><span class="p">)</span>
-con <span class="o">%&gt;%</span> list_processes<span class="p">()</span>
+con <span class="o">%&gt;%</span> listProcesses<span class="p">()</span>
 pg <span class="o">=</span> <span class="kc">...</span>
-job <span class="o">=</span> create_job<span class="p">(</span>pg<span class="p">)</span>
-job <span class="o">%&gt;%</span> start_job<span class="p">()</span>
-job <span class="o">%&gt;%</span> describe_job<span class="p">()</span>
-job <span class="o">%&gt;%</span> download_results<span class="p">(</span><span class="s">&quot;/tmp/job_results/&quot;</span><span class="p">)</span>
+job <span class="o">=</span> con <span class="o">%&gt;%</span> createJob<span class="p">(</span>pg<span class="p">)</span>
+job <span class="o">%&gt;%</span> startJob<span class="p">()</span>
+job <span class="o">%&gt;%</span> describeJob<span class="p">()</span>
+job <span class="o">%&gt;%</span> downloadResults<span class="p">(</span><span class="s">&quot;/tmp/job_results/&quot;</span><span class="p">)</span>
 </pre></div>
 
 <h3 id="python-mixed-style">Python (mixed style)</h3>
