Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/guidelines-clients/index.html
+++ b/v/0.3.0/guidelines-clients/index.html
@@ -973,21 +973,21 @@
 <ul>
 <li>Procedural style: <code>openeo_version()</code> </li>
 <li>OO style:
-  <div class="codehilite"><pre><span></span>OpenEO obj = new OpenEO();
-obj.version();
+  <div class="codehilite"><pre><span></span><span class="n">OpenEO</span> <span class="n">obj</span> <span class="o">=</span> <span class="k">new</span> <span class="n">OpenEO</span><span class="o">();</span>
+<span class="n">obj</span><span class="o">.</span><span class="na">version</span><span class="o">();</span>
 </pre></div></li>
 </ul>
 <p>If you can't store scope data in an object, you may need to pass these information as argument(s) to the method.</p>
 <p>Example:</p>
 <ul>
 <li>Procedural style:
-  <div class="codehilite"><pre><span></span><span class="o">$</span><span class="nt">connection</span> <span class="o">=</span> <span class="nt">openeo_connect</span><span class="o">(</span><span class="s2">&quot;https://openeo.org&quot;</span><span class="o">);</span>
-<span class="nt">openeo_get_capabilities</span><span class="o">($</span><span class="nt">connection</span><span class="o">);</span>
+  <div class="codehilite"><pre><span></span><span class="x">$connection = openeo_connect(&quot;https://openeo.org&quot;);</span>
+<span class="x">openeo_get_capabilities($connection);</span>
 </pre></div></li>
 <li>OO style:
-  <div class="codehilite"><pre><span></span><span class="nt">OpenEO</span> <span class="nt">obj</span> <span class="o">=</span> <span class="nt">new</span> <span class="nt">OpenEO</span><span class="o">();</span>
-<span class="nt">Connection</span> <span class="nt">con</span> <span class="o">=</span> <span class="nt">obj</span><span class="p">.</span><span class="nc">connect</span><span class="o">(</span><span class="s2">&quot;https://openeo.org&quot;</span><span class="o">);</span>
-<span class="nt">con</span><span class="p">.</span><span class="nc">getCapabilities</span><span class="o">();</span>
+  <div class="codehilite"><pre><span></span><span class="n">OpenEO</span> <span class="n">obj</span> <span class="o">=</span> <span class="k">new</span> <span class="n">OpenEO</span><span class="o">();</span>
+<span class="n">Connection</span> <span class="n">con</span> <span class="o">=</span> <span class="n">obj</span><span class="o">.</span><span class="na">connect</span><span class="o">(</span><span class="s">&quot;https://openeo.org&quot;</span><span class="o">);</span>
+<span class="n">con</span><span class="o">.</span><span class="na">getCapabilities</span><span class="o">();</span>
 </pre></div></li>
 </ul>
 <h2 id="method-mappings">Method mappings</h2>
