--- a/v/0.3.0/collections/index.html
+++ b/v/0.3.0/collections/index.html
@@ -792,11 +792,11 @@
                 
                 
                 <h1 id="data-discovery-collections">Data Discovery (Collections)</h1>
-<p>openEO strives for compatibility with <a href="https://github.com/radiantearth/stac-spec">STAC 0.6</a> and <a href="https://github.com/opengeospatial/WFS_FES">OGC WFS 3.0</a> as far as possible. Implementing the data discovery endpoints of openEO should also produce mostly valid STAC and WFS 3.0 responses, including an incomplete compatibility with their APIs (see below).</p>
+<p>openEO strives for compatibility with <a href="https://github.com/radiantearth/stac-spec">STAC</a> and <a href="https://github.com/opengeospatial/WFS_FES">OGC WFS 3.0</a> as far as possible. Implementing the data discovery endpoints of openEO should also produce mostly valid STAC and WFS 3.0 responses, including an incomplete compatibility with their APIs (see below).</p>
 <div class="admonition warning">
 <p class="admonition-title">Warning</p>
-<p>STAC and OGC WFS 3.0, as well as openEO, are still under development. Therefore, it is likely that further changes and adjustments will be made in the future.</p>
 </div>
+<p>​   STAC and OGC WFS 3.0, as well as openEO, are still under development and openEO currently only integrates intermediate dev versions due to time constraints. Therefore, it is very likely that further changes and adjustments will be made in the future.</p>
 <h2 id="extensions">Extensions</h2>
 <p>STAC has several extensions (see their <a href="https://github.com/radiantearth/stac-spec">repository</a>) that can be used to better describe your data. Clients and server are not required to implement all of them, so be aware that some clients may not be able to read all your meta data.</p>
 <p>Some commonly used extensions are:</p>
@@ -809,8 +809,8 @@
 <p>For data discovery in general and each collection you can specify a set of references. These can be alternate representations, e.g. data discovery via OGC WCS or OGC CSW, references to a license, references to actual raw data for downloading, detailed information about pre-processing, etc.</p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
-<p>STAC requires to add a link with relation type <code>self</code> (see below). Although this is not technically necessary for openEO and we do not enforce you to provide such a link, we recommend to provide it anyway.</p>
 </div>
+<p>​   STAC requires to add a link with relation type <code>self</code> (see below). Although this is not technically necessary for openEO and we do not enforce you with our validation tools to provide such a link, we still recommend to provide it anyway for compatibility reasons.</p>
 <h3 id="common-link-relation-types">Common link relation types</h3>
 <p>The following table lists relation types that are commonly used as <code>rel</code> types in the links. The scope 'Collections' refers to the links that are related to a specific collection, 'Discovery' refers to links that are related to data discovery in general and are not about a specific collection.</p>
 <table>
@@ -878,7 +878,7 @@
 <li>Add a <code>links</code> property to the <code>GET /</code> request that links to the WFS endpoints.</li>
 <li>Implement <code>GET /api</code> and return the WFS OpenAPI document.</li>
 <li>Implement <code>GET /conformance</code> and specify which conformance classes your WFS conforms to.</li>
-<li>Implement <code>GET /collections/{collection-name}/items</code> and <code>GET /collections/{collection-name}/items/{feature-id}</code> to support retrieval of individual features.</li>
+<li>Implement <code>GET /collections/{collection-name}/items</code> and <code>GET /collections/{collection-name}/items/{feature-id}</code> to support retrieval of individual features.</li>
 </ul>
 <h3 id="stac-compatibility">STAC compatibility</h3>
 <p>As of now, STAC has two more required endpoints that need to be implemented:</p>
