--- a/v/0.3.0/guidelines-clients/index.html
+++ b/v/0.3.0/guidelines-clients/index.html
@@ -1158,7 +1158,7 @@
 <tbody>
 <tr>
 <td>Connect to a back-end, including authentication. Returns <code>Connection</code>.</td>
-<td><code>connect(url, ?username, ?password, ?auth_type)</code></td>
+<td><code>connect(url, ?auth_type, ?auth_options)</code></td>
 </tr>
 <tr>
 <td>Get client library version.</td>
@@ -1168,7 +1168,8 @@
 </table>
 <h4 id="parameters_1">Parameters</h4>
 <ul>
-<li><strong>auth_type</strong> in <code>connect</code>: <code>basic</code> or <code>oidc</code> (non-exclusive). Only applies if username and password are set and then defaults to <code>oidc</code>.</li>
+<li><strong>auth_type</strong> in <code>connect</code>: <code>null</code>, <code>basic</code> or <code>oidc</code> (non-exclusive). Defaults to <code>null</code> (no authentication).</li>
+<li><strong>auth_options</strong> in <code>connect</code>: May hold additional data for authentication, for example a username and password for <code>basic</code> authentication.</li>
 </ul>
 <h3 id="scope-connection-api">Scope: <code>Connection</code> (API)</h3>
 <table>
@@ -1213,7 +1214,7 @@
 <tr>
 <td>Authenticate with OpenID Connect (if not specified in <code>connect</code>).</td>
 <td><code>GET /credentials/oidc</code></td>
-<td><code>autenticateOIDC(username, password)</code></td>
+<td><code>autenticateOIDC(?options)</code></td>
 </tr>
 <tr>
 <td>Authenticate with HTTP Basic (if not specified in <code>connect</code>).</td>
@@ -1223,7 +1224,7 @@
 <tr>
 <td>Get information about the authenticated user.</td>
 <td><code>GET /me</code></td>
-<td><code>describeUser()</code></td>
+<td><code>describeAccount()</code></td>
 </tr>
 <tr>
 <td>Lists all files from a user. Returns a list of <code>File</code>.</td>
@@ -1275,9 +1276,10 @@
 <h4 id="parameters_2">Parameters</h4>
 <ul>
 <li><strong>user_id</strong> in <code>listFiles</code> and <code>createFile</code>: Defaults to the user id of the authenticated user.</li>
+<li><strong>options</strong> in <code>authenticateOIDC</code>: May hold additional data required for OpenID connect authentication.</li>
 </ul>
 <h3 id="scope-capabilities-content">Scope <code>Capabilities</code> (Content)</h3>
-<p>Should be prefixed with <code>Capabilities</code> if required. In non-object-oriented paradigms it is likely required as <code>version()</code> in this scope and the scope <code>OpenEO</code> could collide. For example, <code>version()</code> in this scope could be named <code>openeo_capabilities_version()</code> in procedural style.</p>
+<p>Should be prefixed with <code>Capabilities</code> if required. In non-object-oriented paradigms it is likely required as <code>version()</code> in this scope and the scope <code>OpenEO</code> could collide. For example, <code>version()</code> in this scope could be named <code>openeo_capabilities_version()</code> in procedural style.</p>
 <table>
 <thead>
 <tr>
