Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/collections/index.html
+++ b/v/0.3.0/collections/index.html
@@ -793,7 +793,11 @@
                 
                 <h1 id="data-discovery-collections">Data Discovery (Collections)</h1>
 <p>openEO strives for compatibility with <a href="https://github.com/radiantearth/stac-spec">STAC</a> and <a href="https://github.com/opengeospatial/WFS_FES">OGC WFS 3.0</a> as far as possible. Implementing the data discovery endpoints of openEO should also produce mostly valid STAC and WFS 3.0 responses, including an incomplete compatibility with their APIs (see below).</p>
-<p>!!! warning    STAC and OGC WFS 3.0, as well as openEO, are still under development and openEO currently only integrates intermediate dev versions due to time constraints. Therefore, it is very likely that further changes and adjustments will be made in the future.</p>
+<div class="admonition warning">
+<p class="admonition-title">Warning</p>
+<p>STAC and OGC WFS 3.0, as well as openEO, are still under development and openEO currently only integrates intermediate dev versions due to time constraints.
+Therefore, it is very likely that further changes and adjustments will be made in the future.</p>
+</div>
 <h2 id="extensions">Extensions</h2>
 <p>STAC has several extensions (see their <a href="https://github.com/radiantearth/stac-spec">repository</a>) that can be used to better describe your data. Clients and server are not required to implement all of them, so be aware that some clients may not be able to read all your meta data.</p>
 <p>Some commonly used extensions are:</p>
@@ -804,7 +808,10 @@
 </ul>
 <h2 id="links">Links</h2>
 <p>For data discovery in general and each collection you can specify a set of references. These can be alternate representations, e.g. data discovery via OGC WCS or OGC CSW, references to a license, references to actual raw data for downloading, detailed information about pre-processing, etc.</p>
-<p>!!! note    STAC requires to add a link with relation type <code>self</code> (see below). Although this is not technically necessary for openEO and we do not enforce you with our validation tools to provide such a link, we still recommend to provide it anyway for compatibility reasons.</p>
+<div class="admonition note">
+<p class="admonition-title">Note</p>
+<p>STAC requires to add a link with relation type <code>self</code> (see below). Although this is not technically necessary for openEO and we do not enforce you with our validation tools to provide such a link, we still recommend to provide it anyway for compatibility reasons.</p>
+</div>
 <h3 id="common-link-relation-types">Common link relation types</h3>
 <p>The following table lists relation types that are commonly used as <code>rel</code> types in the links. The scope 'Collections' refers to the links that are related to a specific collection, 'Discovery' refers to links that are related to data discovery in general and are not about a specific collection.</p>
 <table>
