--- a/v/0.3.0/cors/index.html
+++ b/v/0.3.0/cors/index.html
@@ -823,8 +823,8 @@ CORS defines a way in which a browser and server can interact to determine wheth
 </tr>
 </tbody>
 </table>
-<div class="admonition hint">
-<p class="admonition-title">Hint</p>
+<div class="admonition tip">
+<p class="admonition-title">Tip</p>
 <p>Most server can send the required headers and the responses to the OPTIONS requests globally.
 Otherwise you may want to use a proxy server to add the headers and OPTIONS responses.</p>
 </div>
