Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/guidelines-clients/index.html
+++ b/v/0.4.0/guidelines-clients/index.html
@@ -1242,9 +1242,14 @@
 <td><code>validateProcessGraph(process_graph)</code></td>
 </tr>
 <tr>
-<td>Lists all process graphs of the authenticated user.Returns a list of <code>ProcessGraph</code>.</td>
+<td>Lists all process graphs of the authenticated user. Returns a list of <code>ProcessGraph</code>.</td>
 <td><code>GET /process_graphs</code></td>
 <td><code>listProcessGraphs()</code></td>
+</tr>
+<tr>
+<td>Creates a new stored process graph. Returns a <code>ProcessGraph</code>.</td>
+<td><code>POST /process_graphs</code></td>
+<td><code>createProcessGraph(process_graph, ?title, ?description)</code></td>
 </tr>
 <tr>
 <td>Executes a process graph synchronously.</td>
