Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/guidelines-clients/index.html
+++ b/v/0.4.0/guidelines-clients/index.html
@@ -1416,7 +1416,7 @@
 <li><strong>target</strong> in <code>downloadResults</code>: Path to a local folder.</li>
 </ul>
 <h3 id="scope-processgraph-api">Scope: <code>ProcessGraph</code> (API)</h3>
-<p>The <code>ProcessGraph</code> scope internally knows the <code>pg_id</code> (<code>process_graph_id</code>).</p>
+<p>The <code>ProcessGraph</code> scope internally knows the <code>process_graph_id</code>.</p>
 <table>
 <thead>
 <tr>
@@ -1428,17 +1428,17 @@
 <tbody>
 <tr>
 <td>Get all information about a stored process graph.</td>
-<td><code>GET /process_graphs/{pg_id}</code></td>
+<td><code>GET /process_graphs/{process_graph_id}</code></td>
 <td><code>describeProcessGraph()</code></td>
 </tr>
 <tr>
 <td>Update a stored process graph.</td>
-<td><code>PATCH /process_graphs/{pg_id}</code></td>
+<td><code>PATCH /process_graphs/{process_graph_id}</code></td>
 <td><code>updateProcessGraph(?process_graph, ?title, ?description)</code></td>
 </tr>
 <tr>
 <td>Delete a stored process graph.</td>
-<td><code>DELETE /process_graphs/{pg_id}</code></td>
+<td><code>DELETE /process_graphs/{process_graph_id}</code></td>
 <td><code>deleteProcessGraph()</code></td>
 </tr>
 </tbody>
