Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/guidelines-clients/index.html
+++ b/v/0.4.0/guidelines-clients/index.html
@@ -1110,7 +1110,7 @@
 </ul>
 <h2 id="conventions">Conventions</h2>
 <h3 id="casing">Casing</h3>
-<p>Clients can use <code>snake_case</code>, <code>camelCase</code> or any method used commonly in their environment. For example, the API request to get a list of collections can either be names <code>get_collections</code> or <code>getCollections</code>. This applies for all names, including scopes, method names and parameters.</p>
+<p>Clients can use <code>snake_case</code>, <code>camelCase</code> or any method used commonly in their environment. For example, the API request to get a list of collections can either be names <code>get_collections</code> or <code>getCollections</code>. This applies for all names, including scopes, method names and parameters, but it SHOULD be applied consistently. </p>
 <h3 id="scopes">Scopes</h3>
 <p>Methods usually have a different scope, in object-oriented (OO) programming methods would be part of a class. If programming languages don't have functionalities to scope you may need to simulate it somehow to prevent name collisions. Best practices for this will likely evolve over time.</p>
 <p>Example for the <code>version</code> method in <code>openEO</code>:</p>
