Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/errors/index.html
+++ b/v/0.4.0/errors/index.html
@@ -1041,7 +1041,7 @@
 </tr>
 <tr>
 <td>1410</td>
-<td>File format, file extension or mime type is not allowed.</td>
+<td>File format, file extension or media type is not allowed.</td>
 <td>File type not allowed.</td>
 <td>400</td>
 </tr>
