--- a/v/0.3.1/glossary/index.html
+++ b/v/0.3.1/glossary/index.html
@@ -767,8 +767,8 @@
 <p>In our domain, different terms are used to describe EO data(sets). Within openEO, a <strong>granule</strong> typically refers to a limited area and a single overpass leading to a very short observation period (seconds) or a temporal aggregation of such data (e.g. for 16-day MODIS composites) while a <strong>collection</strong> is an aggregation of granules sharing the same product specification. It typically corresponds to the series of products derived from data acquired by a sensor on board a satellite and having the same mode of operation.</p>
 <p>The <a href="http://ceos.org/ourwork/workinggroups/wgiss/access/opensearch/">CEOS OpenSearch Best Practice Document v1.2</a> lists synonyms used (by organizations) for:</p>
 <ul>
-<li><strong>granule</strong>: dataset (ISO 19115), dataset (ESA), granule (NASA), product (ESA, CNES), scene (JAXA)</li>
-<li><strong>collection</strong>: dataset series (ISO 19115), collection (CNES, NASA), dataset (JAXA), dataset series (ESA), product (JAXA)</li>
+<li><strong>granule</strong>: dataset (ESA, ISO 19115), granule (NASA), product (ESA, CNES), scene (JAXA)</li>
+<li><strong>collection</strong>: dataset series (ESA, ISO 19115), collection (CNES, NASA), dataset (JAXA), product (JAXA)</li>
 </ul>
 <h2 id="processes-and-process-graphs">Processes and process graphs</h2>
 <p>The terms <em>process</em> and <em>process graph</em> have specific meanings in the openEO API specification.</p>
