Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.1/arch/index.html
+++ b/v/0.3.1/arch/index.html
@@ -698,8 +698,8 @@
 <td>Provides services to find out which processes a back-end provides, i.e., what users can do with the available data.</td>
 </tr>
 <tr>
-<td>UDF Runtime Discovery</td>
-<td>Allows discovering the programming languages and their runtime environments to execute user-defined functions.</td>
+<td>UDF</td>
+<td>Discovery and execution of user-defined functions.</td>
 </tr>
 <tr>
 <td>Job Management</td>
@@ -718,12 +718,8 @@
 <td>External web services to access data and job results such as a OGC WMTS service.</td>
 </tr>
 <tr>
-<td>User Content</td>
-<td>User content and accounting.</td>
-</tr>
-<tr>
-<td>Authentication</td>
-<td>Authentication of users.</td>
+<td>Account Management</td>
+<td>User management, accounting and authentication.</td>
 </tr>
 </tbody>
 </table>
