--- a/v/0.3.1/changelog/index.html
+++ b/v/0.3.1/changelog/index.html
@@ -827,24 +827,25 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <h3 id="added">Added</h3>
 <ul>
 <li><code>createProcessGraph</code> method to client development guidelines.</li>
-<li>JSON file with all potential errors.</li>
-<li>Name for errors, which will deprecate the numeric error codes.</li>
-<li>Allow setting a plan for <code>/preview</code></li>
-<li>Default billing plan in capabilities.</li>
+<li>JSON file with all specified errors.</li>
+<li>Textual error codes for each specified error.</li>
+<li>Allow setting a plan for <code>POST /preview</code></li>
+<li>Default billing plan in <code>GET /</code>.</li>
+<li>Job ID in JSON response for <code>GET /jobs/{job_id}/results</code>.</li>
 </ul>
 <h3 id="changed">Changed</h3>
 <ul>
 <li>Several optional fields such as <code>output</code>, <code>title</code> and <code>description</code> are now nullable instead of requiring to omit them.</li>
-<li>The output format is not required in <code>/preview</code> any more and thus allows falling back to the default.</li>
+<li>The output format is not required in <code>POST /preview</code> any more and thus allows falling back to the default.</li>
 </ul>
 <h3 id="deprecated">Deprecated</h3>
 <ul>
-<li>Numeric openEO error codes are soon to be replaced with textual codes.</li>
+<li>Numeric openEO error codes are soon to be replaced with textual error codes.</li>
 <li><code>eo:resolution</code> in collection bands is a duplicate of <code>eo:gsd</code>. Use <code>eo:gsd</code> instead.</li>
 </ul>
 <h3 id="fixed">Fixed</h3>
 <ul>
-<li>Fixed a wrong definition of the header <code>OpenEO-Costs</code> in <code>/preview</code>.</li>
+<li>Fixed a wrong definition of the header <code>OpenEO-Costs</code> in <code>POST /preview</code>.</li>
 <li>Fixed typo in method <code>authenticateOIDC</code> in client development guidelines.</li>
 <li>Fixed the definition of spatial extents by swapping north and south.</li>
 <li>Replaced the outdated occurrences of <code>srs</code> with <code>crs</code> in spatial extents.</li>
