Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.1/processgraphs/index.html
+++ b/v/0.3.1/processgraphs/index.html
@@ -805,20 +805,20 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
 
 <div class="admonition note">
 <p class="admonition-title">Note</p>
-<p>The specified data types except <code>Process</code> and <code>Variable</code> (see definition above) are the native data types supported by JSON. Some limitations apply:
-<em> An array MUST always contain </em>one data type only<em> and is allowed to contain the data types allowed for <code>&lt;Value&gt;</code>.
-</em> Objects are not allowed to have keys with the following names:
-  * <code>process_id</code>, except for objects of type <code>Process</code>
-  * <code>variable_id</code>, except for objects of type <code>Variable</code></p>
 </div>
+<p>​    The specified data types except <code>Process</code> and <code>Variable</code> (see definition above) are the native data types supported by JSON. Some limitations apply:
+​    * An array MUST always contain <em>one data type only</em> and is allowed to contain the data types allowed for <code>&lt;Value&gt;</code>.
+​    * Objects are not allowed to have keys with the following names:
+​      * <code>process_id</code>, except for objects of type <code>Process</code>
+​      * <code>variable_id</code>, except for objects of type <code>Variable</code></p>
 <div class="admonition caution">
 <p class="admonition-title">Caution</p>
-<p>The expected names of arguments are defined by the process descriptions, which can be discovered with calls to <code>GET /processes</code>. Therefore, the key name for a key-value-pair holding an image collection as value doesn't necessarily need to be named <code>imagery</code>. The name depends on the name of the corresponding process argument the image collection is assigned to. Example 2 demonstrates this by using <code>collection</code> as a key once. </p>
 </div>
+<p>​    The expected names of arguments are defined by the process descriptions, which can be discovered with calls to <code>GET /processes</code>. Therefore, the key name for a key-value-pair holding an image collection as value doesn't necessarily need to be named <code>imagery</code>. The name depends on the name of the corresponding process argument the image collection is assigned to. Example 2 demonstrates this by using <code>collection</code> as a key once. </p>
 <h3 id="variables">Variables</h3>
 <p>Process graphs can also hold a variable, which can be filled in later. For shared process graphs this can be useful to make them more portable, e.g in case a back-end specific product name would be stored with the process graph.</p>
 <p>Variables are defined as follows:</p>
-<div class="codehilite"><pre><span></span>&lt;Process&gt; := {
+<div class="codehilite"><pre><span></span>&lt;Variable&gt; := {
   &quot;variable_id&quot;: &lt;string&gt;,
   &quot;description&quot;: &lt;string&gt;,
   &quot;type&quot;: &lt;string&gt;,
