Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.1/changelog/index.html
+++ b/v/0.3.1/changelog/index.html
@@ -851,6 +851,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <li>Replaced the outdated occurrences of <code>srs</code> with <code>crs</code> in spatial extents.</li>
 <li>Added missing required descriptions to process definitions.</li>
 <li>Added missing error messages.</li>
+<li>Fixed unclear specification for arrays used as process graph arguments.</li>
 </ul>
 <h2 id="030-2018-09-21">[0.3.0] - 2018-09-21</h2>
 <p>First version after proof of concept tackling many major issues. No changelog available.</p>
