--- a/v/0.3.1/processgraphs/index.html
+++ b/v/0.3.1/processgraphs/index.html
@@ -806,8 +806,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
 <div class="admonition note">
 <p class="admonition-title">Note</p>
 </div>
-<p>​    The specified data types except <code>Process</code> and <code>Variable</code> (see definition above) are the native data types supported by JSON. Some limitations apply:
-​    * An array MUST always contain <em>one data type only</em> and is allowed to contain the data types allowed for <code>&lt;Value&gt;</code>.
+<p>​    The specified data types except <code>Process</code> and <code>Variable</code> (see definition above) are the native data types supported by JSON. Limitations apply:
 ​    * Objects are not allowed to have keys with the following names:
 ​      * <code>process_id</code>, except for objects of type <code>Process</code>
 ​      * <code>variable_id</code>, except for objects of type <code>Variable</code></p>
