Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.1/changelog/index.html
+++ b/v/0.3.1/changelog/index.html
@@ -837,6 +837,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <ul>
 <li>Several optional fields such as <code>output</code>, <code>title</code> and <code>description</code> are now nullable instead of requiring to omit them.</li>
 <li>The output format is not required in <code>POST /preview</code> any more and thus allows falling back to the default.</li>
+<li>The <code>output_format</code> parameter in <code>createJob</code> and <code>execute</code> in client development guidelines.</li>
 <li>The <code>extent</code> parameters in <code>filter_bbox</code> and <code>filter_daterange</code> are formally required now.</li>
 </ul>
 <h3 id="deprecated">Deprecated</h3>
