--- a/v/0.3.1/guidelines-clients/index.html
+++ b/v/0.3.1/guidelines-clients/index.html
@@ -1283,7 +1283,7 @@
 <tr>
 <td>Executes a process graph synchronously.</td>
 <td><code>POST /preview</code></td>
-<td><code>execute(process_graph, output_format, ?output_parameters, ?budget)</code></td>
+<td><code>execute(process_graph, ?output_format, ?output_parameters, ?budget)</code></td>
 </tr>
 <tr>
 <td>Lists all jobs of the authenticated user. Returns a list of <code>Job</code>.</td>
@@ -1293,7 +1293,7 @@
 <tr>
 <td>Creates a new job. Returns a <code>Job</code>.</td>
 <td><code>POST /jobs</code></td>
-<td><code>createJob(process_graph, output_format, ?output_parameters, ?title, ?description, ?plan, ?budget, ?additional)</code></td>
+<td><code>createJob(process_graph, ?output_format, ?output_parameters, ?title, ?description, ?plan, ?budget, ?additional)</code></td>
 </tr>
 <tr>
 <td>Lists all secondary services of the authenticated user. Returns a list of <code>Service</code>.</td>
