Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.4.0/changelog/index.html
+++ b/v/0.4.0/changelog/index.html
@@ -928,6 +928,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 <ul>
 <li>More consistent client development guidelines (casing of parameter names).</li>
 <li><code>mime_type</code> replaced with <code>media_type</code> in the process catalogue input parameters and return values.</li>
+<li>The schema for <code>exceptions</code> defined in process descriptions (<code>GET /processes</code>) follows the general schema for openEO errors.</li>
 </ul>
 <h3 id="deprecated">Deprecated</h3>
 <ul>
@@ -935,7 +936,7 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
 </ul>
 <h3 id="removed">Removed</h3>
 <ul>
-<li>...</li>
+<li>Numeric openEO error codes. Replaced in responses with textual error codes.</li>
 </ul>
 <h3 id="fixed">Fixed</h3>
 <ul>
